Update project references and enhance user account management features

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flow-manager",
+  "name": "AmproProject-HUB3",
   "version": "1.0.0",
   "description": "Studio Management Webapp met Supabase",
   "scripts": {
