--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/postcss": "^4.1.16",
     "@vercel/analytics": "^1.5.0",
+    "dompurify": "^3.2.7",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "16.0.7",
